add rank as ordinal

--- a/use-cases/create_wikidata/Wikidata-Useful-Files.ipynb
+++ b/use-cases/create_wikidata/Wikidata-Useful-Files.ipynb
@@ -832,7 +832,7 @@
     "if compute_pagerank:\n",
     "    kgtk(\"\"\"graph-statistics \n",
     "            -i \"$GRAPH/claims.wikibase-item.tsv.gz\" \n",
-    "            -o $OUT/metadata.pagerank.directed.tsv.gz \n",
+    "            -o $TEMP/metadata.pagerank.directed.tsv.gz \n",
     "            --compute-pagerank True \n",
     "            --compute-hits False \n",
     "            --page-rank-property Pdirected_pagerank \n",
@@ -844,6 +844,33 @@
     "            --output-statistics-only \n",
     "            --undirected False \n",
     "            --log-file $TEMP/metadata.pagerank.directed.summary.txt\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if compute_pagerank:\n",
+    "    directed_pagerank = kgtk(\"\"\"\n",
+    "        query -i $TEMP/metadata.pagerank.directed.tsv.gz  \n",
+    "        --match '(n1)-[l:Pdirected_pagerank]->(pagerank)'\n",
+    "    \"\"\")\n",
+    "\n",
+    "    directed_pagerank_sorted = directed_pagerank.sort_values(\"node2\", ascending=False)\n",
+    "    directed_pagerank_sorted.insert(0, 'P1545', range(1, 1 + len(directed_pagerank_sorted)))\n",
+    "    directed_pagerank_sorted.to_csv(f\"{os.environ['TEMP']}/directed-pagerank.ordinal.tsv\", index=False, sep='\\t')\n",
+    "    \n",
+    "\n",
+    "    kgtk(\"\"\"\n",
+    "        normalize -i \"$TEMP\"/directed-pagerank.ordinal.tsv\n",
+    "        / add-id --id-style wikidata \n",
+    "        -o \"$OUT\"/metadata.pagerank.directed.tsv.gz\n",
+    "    \"\"\")\n",
+    "    kgtk(\"\"\"\n",
+    "        head -i \"$OUT\"/metadata.pagerank.directed.tsv.gz\n",
+    "    \"\"\")"
    ]
   },
   {
@@ -898,7 +925,7 @@
     "if compute_pagerank:\n",
     "    kgtk(\"\"\"graph-statistics \n",
     "            -i \"$GRAPH/claims.wikibase-item.tsv.gz\" \n",
-    "            -o $OUT/metadata.pagerank.undirected.tsv.gz \n",
+    "            -o $TEMP/metadata.pagerank.undirected.tsv.gz \n",
     "            --compute-pagerank True \n",
     "            --compute-hits False \n",
     "            --page-rank-property Pundirected_pagerank\n",
@@ -910,6 +937,31 @@
     "            --output-statistics-only \n",
     "            --undirected True \n",
     "            --log-file $TEMP/metadata.pagerank.undirected.summary.txt\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if compute_pagerank:\n",
+    "    undirected_pagerank = kgtk(\"\"\"\n",
+    "        query -i $TEMP/metadata.pagerank.undirected.tsv.gz \n",
+    "        --match '(n1)-[l:Pundirected_pagerank]->(pagerank)'\n",
+    "    \"\"\")\n",
+    "\n",
+    "    undirected_pagerank = undirected_pagerank.sort_values(\"node2\", ascending=False)\n",
+    "    undirected_pagerank.insert(0, 'P1545', range(1, 1 + len(undirected_pagerank)))\n",
+    "    undirected_pagerank.to_csv(f\"{os.environ['TEMP']}/undirected-pagerank.ordinal.tsv\", index=False, sep='\\t')\n",
+    "    kgtk(\"\"\"\n",
+    "        normalize -i \"$TEMP\"/undirected-pagerank.ordinal.tsv\n",
+    "        / add-id --id-style wikidata \n",
+    "        -o \"$OUT\"/metadata.pagerank.undirected.tsv.gz\n",
+    "    \"\"\")\n",
+    "    kgtk(\"\"\"\n",
+    "        head -i \"$OUT\"/metadata.pagerank.undirected.tsv.gz\n",
+    "    \"\"\")"
    ]
   },
   {
@@ -1300,9 +1352,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "kgtk-env-ckg07",
+   "display_name": "kgtk-env",
    "language": "python",
-   "name": "kgtk-env-ckg07"
+   "name": "kgtk-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1314,7 +1366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
