add pagerank to claims

--- a/use-cases/create_wikidata/Create-claims-augmented-for-browser.ipynb
+++ b/use-cases/create_wikidata/Create-claims-augmented-for-browser.ipynb
@@ -357,6 +357,7 @@
     "        -i $TEMP/derived.claims.edges.tsv.gz\n",
     "        -i $GRAPH/claims.tsv.gz\n",
     "        -i $GRAPH/downloaded.wikipedia.short_abstracts.tsv.gz\n",
+    "        -i $GRAPH/metadata.pagerank.undirected.tsv.gz\n",
     "        / sort \n",
     "         --extra '--parallel 24 --buffer-size 30% --temporary-directory {os.environ['TEMP']}'\n",
     "        -o $OUT/claims.tsv.gz\n",
