--- a/use-cases/create_wikidata/Create-claims-augmented-for-browser.ipynb
+++ b/use-cases/create_wikidata/Create-claims-augmented-for-browser.ipynb
@@ -348,6 +348,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c34a223e-c27f-4656-9bea-e3a087907f80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk(\"\"\"filter -i $GRAPH/sitelinks.tsv.gz\n",
+    "               -o $TEMP/sitelinks.filtered.tsv.gz\n",
+    "               -p ';wikipedia_sitelink;'\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "18694b19-314c-4e1c-b8cb-651b1a4c2268",
    "metadata": {},
@@ -358,6 +371,7 @@
     "        -i $GRAPH/claims.tsv.gz\n",
     "        -i $GRAPH/downloaded.wikipedia.short_abstracts.tsv.gz\n",
     "        -i $GRAPH/metadata.pagerank.undirected.tsv.gz\n",
+    "        -i $TEMP/sitelinks.filtered.tsv.gz\n",
     "        / sort \n",
     "         --extra '--parallel 24 --buffer-size 30% --temporary-directory {os.environ['TEMP']}'\n",
     "        -o $OUT/claims.tsv.gz\n",
