add P1963computed_star and pagerank

--- a/use-cases/create_wikidata/Create-claims-augmented-for-browser.ipynb
+++ b/use-cases/create_wikidata/Create-claims-augmented-for-browser.ipynb
@@ -250,6 +250,8 @@
     "    -i $GRAPH/derived.P1963computed.subclass.count.star.tsv.gz\n",
     "    -i $GRAPH/derived.Pproperty_domain.tsv.gz\n",
     "    -i $TEMP/kgtk.properties.claims.tsv\n",
+    "    -i $GRAPH/derived.P1963computed.count.star.tsv.gz\n",
+    "    -i $GRAPH/metadata.pagerank.undirected.tsv.gz\n",
     "    -o $TEMP/derived.claims.augmented.tsv.gz\n",
     "\"\"\")"
    ]
@@ -370,7 +372,6 @@
     "        -i $TEMP/derived.claims.edges.tsv.gz\n",
     "        -i $GRAPH/claims.tsv.gz\n",
     "        -i $GRAPH/downloaded.wikipedia.short_abstracts.tsv.gz\n",
-    "        -i $GRAPH/metadata.pagerank.undirected.tsv.gz\n",
     "        -i $TEMP/sitelinks.filtered.tsv.gz\n",
     "        / sort \n",
     "         --extra '--parallel 24 --buffer-size 30% --temporary-directory {os.environ['TEMP']}'\n",
