update paths, cleanup

--- a/use-cases/create_wikidata/Create-claims-augmented-for-browser.ipynb
+++ b/use-cases/create_wikidata/Create-claims-augmented-for-browser.ipynb
@@ -30,9 +30,9 @@
    "source": [
     "# Parameters\n",
     "\n",
-    "input_path = \"/data/amandeep/wikidata-20211027-dwd-v3\"\n",
-    "output_path = \"/data/amandeep/wikidata-20211027-dwd-v3\"\n",
-    "kgtk_path = \"/Users/amandeep/Github/kgtk\"\n",
+    "input_path = \"/data/amandeep/wikidata-20220505-dwd-v4\"\n",
+    "output_path = \"/data/amandeep/wikidata-20220505-dwd-v4\"\n",
+    "kgtk_path = \"/data/amandeep/Github/kgtk\"\n",
     "\n",
     "graph_cache_path = None\n",
     "\n",
@@ -63,9 +63,9 @@
      "output_type": "stream",
      "text": [
       "User home: /nas/home/amandeep\n",
-      "Current dir: /data/amandeep/github/kgtk-browser\n",
-      "KGTK dir: /Users/amandeep/Github/kgtk\n",
-      "Use-cases dir: /Users/amandeep/Github/kgtk/use-cases\n"
+      "Current dir: /data/amandeep/Github/kgtk-notebooks/use-cases/create_wikidata\n",
+      "KGTK dir: /data/amandeep/Github/kgtk\n",
+      "Use-cases dir: /data/amandeep/Github/kgtk/use-cases\n"
      ]
     }
    ],
@@ -88,18 +88,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GRAPH: /data/amandeep/wikidata-20211027-dwd-v3\n",
-      "KGTK_LABEL_FILE: /data/amandeep/wikidata-20211027-dwd-v3/labels.en.tsv.gz\n",
-      "kypher: kgtk --debug query --graph-cache /data/amandeep/wikidata-20211027-dwd-v3/browser-claims-file/temp.browser-claims-file/wikidata.sqlite3.db\n",
-      "STORE: /data/amandeep/wikidata-20211027-dwd-v3/browser-claims-file/temp.browser-claims-file/wikidata.sqlite3.db\n",
-      "KGTK_GRAPH_CACHE: /data/amandeep/wikidata-20211027-dwd-v3/browser-claims-file/temp.browser-claims-file/wikidata.sqlite3.db\n",
-      "TEMP: /data/amandeep/wikidata-20211027-dwd-v3/browser-claims-file/temp.browser-claims-file\n",
-      "OUT: /data/amandeep/wikidata-20211027-dwd-v3/browser-claims-file\n",
-      "USE_CASES_DIR: /Users/amandeep/Github/kgtk/use-cases\n",
-      "EXAMPLES_DIR: /Users/amandeep/Github/kgtk/examples\n",
+      "STORE: /data/amandeep/wikidata-20220505-dwd-v4/browser-claims-file/temp.browser-claims-file/wikidata.sqlite3.db\n",
+      "KGTK_LABEL_FILE: /data/amandeep/wikidata-20220505-dwd-v4/labels.en.tsv.gz\n",
+      "GRAPH: /data/amandeep/wikidata-20220505-dwd-v4\n",
+      "OUT: /data/amandeep/wikidata-20220505-dwd-v4/browser-claims-file\n",
+      "KGTK_GRAPH_CACHE: /data/amandeep/wikidata-20220505-dwd-v4/browser-claims-file/temp.browser-claims-file/wikidata.sqlite3.db\n",
       "kgtk: kgtk --debug\n",
+      "TEMP: /data/amandeep/wikidata-20220505-dwd-v4/browser-claims-file/temp.browser-claims-file\n",
+      "kypher: kgtk --debug query --graph-cache /data/amandeep/wikidata-20220505-dwd-v4/browser-claims-file/temp.browser-claims-file/wikidata.sqlite3.db\n",
+      "USE_CASES_DIR: /data/amandeep/Github/kgtk/use-cases\n",
+      "EXAMPLES_DIR: /data/amandeep/Github/kgtk/examples\n",
       "KGTK_OPTION_DEBUG: false\n",
-      "claims: /data/amandeep/wikidata-20211027-dwd-v3/claims.tsv.gz\n"
+      "claims: /data/amandeep/wikidata-20220505-dwd-v4/claims.tsv.gz\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 11367  100 11367    0     0  26973      0 --:--:-- --:--:-- --:--:-- 26936\n"
+      "100 11773  100 11773    0     0  29083      0 --:--:-- --:--:-- --:--:-- 29141\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c34a223e-c27f-4656-9bea-e3a087907f80",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "18694b19-314c-4e1c-b8cb-651b1a4c2268",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
     "        -i $GRAPH/claims.tsv.gz\n",
     "        -i $GRAPH/downloaded.wikipedia.short_abstracts.tsv.gz\n",
     "        -i $TEMP/sitelinks.filtered.tsv.gz\n",
-    "        / sort \n",
+    "        / sort -c node1 label node2\n",
     "         --extra '--parallel 24 --buffer-size 30% --temporary-directory {os.environ['TEMP']}'\n",
     "        -o $OUT/claims.tsv.gz\n",
     "\"\"\")"
@@ -386,13 +386,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f7a411a-9155-4dc8-87c0-8ac34e3497a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kgtk-env",
+   "display_name": "kgtk-env-ckg07",
    "language": "python",
-   "name": "kgtk-env"
+   "name": "kgtk-env-ckg07"
   },
   "language_info": {
    "codemirror_mode": {
@@ -404,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
