--- a/use-cases/create_wikidata/create-wikidata-dwd.ipynb
+++ b/use-cases/create_wikidata/create-wikidata-dwd.ipynb
@@ -469,7 +469,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mv $p_output_path/$p_project_name/*tsv.gz $p_output_path"
+    "!mv $p_output_path/$p_project_name/statistics.Pinstance_count.star.tsv.gz $p_output_path\n",
+    "!mv $p_output_path/$p_project_name/statistics.Pinstance_count.tsv.gz $p_output_path\n",
+    "!mv $p_output_path/$p_project_name/statistics.Psubclass_count.star.tsv.gz $p_output_path\n",
+    "!mv $p_output_path/$p_project_name/derived.class.P1963computed.count.tsv.gz $p_output_path\n",
+    "!mv $p_output_path/$p_project_name/derived.P1963computed.subclass.count.star.tsv.gz $p_output_path\n",
+    "!mv $p_output_path/$p_project_name/derived.Pproperty_domain.tsv.gz $p_output_path\n",
+    "!mv $p_output_path/$p_project_name/derived.P1963computed.count.star.tsv.gz $p_output_path"
    ]
   },
   {
