fix runtime issues

--- a/use-cases/create_wikidata/Embeddings-Elasticsearch-Triples.ipynb
+++ b/use-cases/create_wikidata/Embeddings-Elasticsearch-Triples.ipynb
@@ -595,7 +595,7 @@
    "outputs": [],
    "source": [
     "if generate_triples:\n",
-    "    ls $OUT/kgtk_triples_split/*.tsv.gz | parallel -j 18  'kgtk --debug generate-wikidata-triples -lp label -ap alias -dp description -pf $OUT/metadata.property.datatypes.augmented.tsv.gz --output-n-lines 100000 --generate-truthy --warning --use-id --log-path $TEMP/generate_triples_log.txt --error-action log -i {} -o {.}.ttl'\n",
+    "    !ls $OUT/kgtk_triples_split/*.tsv.gz | parallel -j 18  'kgtk --debug generate-wikidata-triples -lp label -ap alias -dp description -pf $OUT/metadata.property.datatypes.augmented.tsv.gz --output-n-lines 100000 --generate-truthy --warning --use-id --log-path $TEMP/generate_triples_log.txt --error-action log -i {} -o {.}.ttl'\n",
     "\n"
    ]
   }
