--- a/use-cases/create_wikidata/Wikidata-Subsets.ipynb
+++ b/use-cases/create_wikidata/Wikidata-Subsets.ipynb
@@ -80,7 +80,8 @@
     "notebooks_folder = f\"{kgtk_path}/use-cases\"\n",
     "\n",
     "languages = \"en,ru,es,zh-cn,de,it,nl,pl,fr,pt,sv\"\n",
-    "debug = False"
+    "debug = False\n",
+    "kernel_name = \"kgtk-env\""
    ]
   },
   {
@@ -835,6 +836,7 @@
     "pm.execute_notebook(\n",
     "    \"partition-wikidata.ipynb\",\n",
     "    os.environ[\"TEMP\"] + \"/partition-wikidata.out.ipynb\",\n",
+    "    kernel_name=kernel_name,\n",
     "    parameters=dict(\n",
     "        wikidata_input_path = os.environ[\"OUT\"] + \"/all.tsv.gz\",\n",
     "        wikidata_parts_path = os.environ[\"OUT\"] + \"/parts\",\n",
@@ -878,6 +880,7 @@
     "pm.execute_notebook(\n",
     "    f'{useful_files_notebook}',\n",
     "    os.environ[\"TEMP\"] + \"/Wikidata-Useful-Files-Out.ipynb\",\n",
+    "    kernel_name=kernel_name,\n",
     "    parameters=dict(\n",
     "        output_path = os.environ[\"OUT\"],\n",
     "        input_path = os.environ[\"OUT\"],\n",
