--- a/use-cases/create_wikidata/create-wikidata-dwd.ipynb
+++ b/use-cases/create_wikidata/create-wikidata-dwd.ipynb
@@ -336,7 +336,8 @@
     "datatype_property = \"datatype\"\n",
     "\n",
     "es_url=\"http://ckg07:9200\"\n",
-    "es_index=\"wikidata-dwd-kgtk-search-04\""
+    "es_index=\"wikidata-dwd-kgtk-search-04\"\n",
+    "old_es_index=\"wikidata-dwd-kgtk-search-03\""
    ]
   },
   {
@@ -688,7 +689,8 @@
     "os.environ['search_output_path']=search_output_path\n",
     "os.environ['search_project_name']=search_project_name\n",
     "os.environ['es_url']=es_url\n",
-    "os.environ['es_index']=es_index"
+    "os.environ['es_index']=es_index\n",
+    "os.environ['old_es_index']=old_es_index"
    ]
   },
   {
@@ -713,7 +715,27 @@
    "id": "c0619b92-6a75-4977-b2c8-a0ca4f3d6f82",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%bash\n",
+    "curl -X POST \"$es_url/_aliases?pretty\" -H 'Content-Type: application/json' -d'\n",
+    "{\n",
+    "  \"actions\": [\n",
+    "    {\n",
+    "      \"remove\": {\n",
+    "        \"index\": \"$old_es_index\",\n",
+    "        \"alias\": \"wikidata-dwd-kgtk-search\"\n",
+    "      }\n",
+    "    },\n",
+    "    {\n",
+    "      \"add\": {\n",
+    "        \"index\": \"$es_index\",\n",
+    "        \"alias\": \"wikidata-dwd-kgtk-search\"\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}\n",
+    "'"
+   ]
   }
  ],
  "metadata": {
