--- a/use-cases/create_wikidata/properties-for-this-type.ipynb
+++ b/use-cases/create_wikidata/properties-for-this-type.ipynb
@@ -192,7 +192,7 @@
     "# output_path = \"/Volumes/saggu-ssd/wikidata-dwd-v3\"\n",
     "output_path = \"/data/amandeep/wikidata-20220505-dwd-v4\"\n",
     "\n",
-    "# graph_cache_path = \"/Volumes/crucial/wikidata-cache/wikidata.sqlite3.db\"\n",
+    "graph_cache_path = \"/Volumes/crucial/wikidata-cache/wikidata.sqlite3.db\"\n",
     "\n",
     "project_name = \"p1963\"\n",
     "debug = True\n",
@@ -244,7 +244,7 @@
     "ck.configure_kgtk(input_graph_path=input_path,\n",
     "                  output_path=output_path,\n",
     "                  project_name=project_name,\n",
-    "                  graph_cache_path=None,\n",
+    "                  graph_cache_path=graph_cache_path,\n",
     "                  debug=True)"
    ]
   },
