close the old index

--- a/use-cases/create_wikidata/create-wikidata-dwd.ipynb
+++ b/use-cases/create_wikidata/create-wikidata-dwd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "93f651b9-d27d-40bb-b531-cfabad740521",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.78 s, sys: 1.95 s, total: 3.73 s\n",
-      "Wall time: 10.8 s\n"
+      "CPU times: user 1.91 s, sys: 2.44 s, total: 4.35 s\n",
+      "Wall time: 3.38 s\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "217db6b6-3e26-47f0-ba62-cbce9270021b",
    "metadata": {
     "tags": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b1c90cb1-baab-4387-bad5-62d703d84ec1",
    "metadata": {},
    "outputs": [
@@ -73,8 +73,8 @@
       "Current dir: /data/amandeep/Github/kgtk-notebooks/use-cases/create_wikidata\n",
       "KGTK dir: /data/amandeep/Github/kgtk\n",
       "Use-cases dir: /data/amandeep/Github/kgtk/use-cases\n",
-      "CPU times: user 1.22 ms, sys: 152 µs, total: 1.37 ms\n",
-      "Wall time: 1.02 ms\n"
+      "CPU times: user 842 µs, sys: 0 ns, total: 842 µs\n",
+      "Wall time: 739 µs\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "69124bdd-c899-4098-89b5-a5dbcb02e63c",
    "metadata": {},
    "outputs": [
@@ -97,16 +97,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk: kgtk\n",
-      "USE_CASES_DIR: /data/amandeep/Github/kgtk/use-cases\n",
-      "kypher: kgtk query --graph-cache /data/amandeep/create-wikidata-dwd-20220623/temp.create-wikidata-dwd-20220623/wikidata.sqlite3.db\n",
-      "KGTK_GRAPH_CACHE: /data/amandeep/create-wikidata-dwd-20220623/temp.create-wikidata-dwd-20220623/wikidata.sqlite3.db\n",
-      "STORE: /data/amandeep/create-wikidata-dwd-20220623/temp.create-wikidata-dwd-20220623/wikidata.sqlite3.db\n",
-      "EXAMPLES_DIR: /data/amandeep/Github/kgtk/examples\n",
-      "OUT: /data/amandeep/create-wikidata-dwd-20220623\n",
-      "TEMP: /data/amandeep/create-wikidata-dwd-20220623/temp.create-wikidata-dwd-20220623\n",
-      "GRAPH: /data/amandeep\n",
       "KGTK_LABEL_FILE: /data/amandeep/labels.en.tsv.gz\n",
+      "STORE: /data/amandeep/create-wikidata-dwd-20220623/temp.create-wikidata-dwd-20220623/wikidata.sqlite3.db\n",
+      "OUT: /data/amandeep/create-wikidata-dwd-20220623\n",
+      "kypher: kgtk query --graph-cache /data/amandeep/create-wikidata-dwd-20220623/temp.create-wikidata-dwd-20220623/wikidata.sqlite3.db\n",
+      "EXAMPLES_DIR: /data/amandeep/Github/kgtk/examples\n",
+      "USE_CASES_DIR: /data/amandeep/Github/kgtk/use-cases\n",
+      "kgtk: kgtk\n",
+      "GRAPH: /data/amandeep\n",
+      "TEMP: /data/amandeep/create-wikidata-dwd-20220623/temp.create-wikidata-dwd-20220623\n",
+      "KGTK_GRAPH_CACHE: /data/amandeep/create-wikidata-dwd-20220623/temp.create-wikidata-dwd-20220623/wikidata.sqlite3.db\n",
       "KGTK_OPTION_DEBUG: false\n"
      ]
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f247bcc7-29a6-4756-9b4e-73a84693af20",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "f3d42da9-ac53-4f77-85aa-fe889b87c8f0",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "6341b690-c846-4482-adcc-ba30dc69f267",
    "metadata": {},
    "outputs": [],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "55f19a42-9659-4e76-aa53-e22338fd93dc",
    "metadata": {},
    "outputs": [],
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "2b8032ba-1ce6-480c-9d71-675edfb878f2",
    "metadata": {},
    "outputs": [],
@@ -1593,8 +1593,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8894ee42-455b-4bc3-bb9d-6a4e80047124",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   106  100   106    0     0     27      0  0:00:03  0:00:03 --:--:--    27\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"acknowledged\":true,\"shards_acknowledged\":true,\"indices\":{\"wikidata-dwd-kgtk-search-05\":{\"closed\":true}}}"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "curl -X POST \"$es_url/$old_es_index/_close\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03f0dd36-ab8c-49a1-83b5-38b481a3795a",
    "metadata": {},
    "outputs": [],
    "source": []
